Corrected link in Synchronizing section of book
Just before the 0.6 release, the script in the old "Configure and build in
RAM" section was significantly improved and fully described in a new
section called "Separate build and source directories". But the
"Synchronizing" section was still pointing the readers to the "Configure
and build in RAM" section. It now points to the new section.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -5385,8 +5385,10 @@ outputs from the previous version being mixed with outputs from the newly
 pulled work. Therefore, the first step is to clean/delete all the built
 files with @command{make distclean}. Fortunately the GNU build system
 allows the separation of source and built files (in separate
-directories). You can use it to avoid the cleaning step. Gnuastro already
-has script for this, see @ref{Configure and build in RAM}.
+directories). This is a great feature to keep your source directory clean
+and you can use it to avoid the cleaning step. Gnuastro comes with a script
+with some useful options for this job. It is useful if you regularly pull
+recent changes, see @ref{Separate build and source directories}.
 
 After the pull, we must re-configure Gnuastro with @command{autoreconf -f}
 (part of GNU Autoconf). It will update the @file{./configure} script and
