--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54057: Building failure due to not finding gsl_interp_steffen.
   bug #54063: Match tests in make check fail randomly.
   bug #54186: MakeCatalog's --checkupperlimit not keeping output's name.
+  bug #54188: MakeCatalog's Upperlimit not being sigma-clipped properly.
 
 
 
