Better names for two options in MakeCatalog
The `--checkupperlimit' option name was too long (was forcing the
description in `--help' to go onto the next line). So it was shortened to
`--checkuplim'.

The `--noriverbrightness' option was renamed to `--brightnessnoriver' to be
sorted along with the other brightness options in the output of `--help'.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** Changed features
 
+  MakeCatalog:
+    - `--checkuplim': new name for `--checkupperlimit'.
+    - `--brightnessnoriver': new name for `--noriverbrightness'.
+
   Library:
     - gal_txt_write: new `colinfoinstdout' argument.
     - gal_table_write: new `colinfoinstdout' argument.
